Adiciona autenticação via token JWT na API
