# src/controllers/LoginController.js
@@ -1,4 +1,5 @@
 const HttpController = require('./HttpController');
+const LoginService = require('../services/LoginService');
 
 class LoginController extends HttpController {
     // sobrescreve o método da classe HttpController
@@ -16,17 +17,22 @@ class LoginController extends HttpController {
         // valida se foi passado no body os campos de login e senha
         if (!body || !body.login || !body.senha) {
             
+            req.logger.info('requicisão de login inválida')
+
             // retorna um erro para quem chamou a API sobre os parâmetros inválidos
             return res.status(400).json({
                 status: 400,
                 erro: "Parâmetros de entrada inválidos"
             });
         }
+
+        const service = new LoginService();
+        const resultado = service.logar(body.login, body.senha);
         
+        req.logger.info('requisição de login realizada com sucesso,', `resultado: ${JSON.stringify(resultado)}`);
+
         // devolve a resposta mockada do login em formato json
-        res.json({
-            token: 'token gerado pela api'
-        });
+        res.json(resultado);
     }
 }
 
